licenses(["notice"])

java_test(
    name = "SigUtilTest",
    size = "small",
    srcs = ["SigUtilTest.java"],
    deps = [
        "//proto:common_java_proto",
        "//src/main/java/com/google/crypto/tink/signature/internal:sig_util",
        "//src/main/java/com/google/crypto/tink/subtle:enums",
        "@maven//:junit_junit",
    ],
)

java_test(
    name = "EcdsaProtoSerializationTest",
    size = "small",
    srcs = ["EcdsaProtoSerializationTest.java"],
    deps = [
        "//proto:common_java_proto",
        "//proto:ecdsa_java_proto",
        "//proto:tink_java_proto",
        "//src/main/java/com/google/crypto/tink:insecure_secret_key_access",
        "//src/main/java/com/google/crypto/tink:key",
        "//src/main/java/com/google/crypto/tink:parameters",
        "//src/main/java/com/google/crypto/tink/internal:mutable_serialization_registry",
        "//src/main/java/com/google/crypto/tink/internal:proto_key_serialization",
        "//src/main/java/com/google/crypto/tink/internal:proto_parameters_serialization",
        "//src/main/java/com/google/crypto/tink/internal/testing:asserts",
        "//src/main/java/com/google/crypto/tink/signature:ecdsa_parameters",
        "//src/main/java/com/google/crypto/tink/signature:ecdsa_private_key",
        "//src/main/java/com/google/crypto/tink/signature:ecdsa_public_key",
        "//src/main/java/com/google/crypto/tink/signature/internal:ecdsa_proto_serialization",
        "//src/main/java/com/google/crypto/tink/subtle:hex",
        "//src/main/java/com/google/crypto/tink/util:secret_big_integer",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)

java_test(
    name = "LegacyFullSignTest",
    size = "small",
    srcs = ["LegacyFullSignTest.java"],
    deps = [
        "//proto:ed25519_java_proto",
        "//proto:tink_java_proto",
        "//src/main/java/com/google/crypto/tink:insecure_secret_key_access",
        "//src/main/java/com/google/crypto/tink:public_key_sign",
        "//src/main/java/com/google/crypto/tink:public_key_verify",
        "//src/main/java/com/google/crypto/tink:registry",
        "//src/main/java/com/google/crypto/tink/internal:legacy_proto_key",
        "//src/main/java/com/google/crypto/tink/internal:proto_key_serialization",
        "//src/main/java/com/google/crypto/tink/signature:ed25519_public_key",
        "//src/main/java/com/google/crypto/tink/signature/internal:legacy_full_sign",
        "//src/main/java/com/google/crypto/tink/signature/internal/testing:legacy_public_key_sign_key_manager",
        "//src/main/java/com/google/crypto/tink/signature/internal/testing:legacy_public_key_verify_key_manager",
        "//src/main/java/com/google/crypto/tink/subtle:bytes",
        "//src/main/java/com/google/crypto/tink/subtle:ed25519_verify",
        "//src/main/java/com/google/crypto/tink/subtle:hex",
        "//src/main/java/com/google/crypto/tink/util:bytes",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)

java_test(
    name = "LegacyFullVerifyTest",
    size = "small",
    srcs = ["LegacyFullVerifyTest.java"],
    deps = [
        "//proto:ed25519_java_proto",
        "//proto:tink_java_proto",
        "//src/main/java/com/google/crypto/tink:insecure_secret_key_access",
        "//src/main/java/com/google/crypto/tink:public_key_verify",
        "//src/main/java/com/google/crypto/tink:registry",
        "//src/main/java/com/google/crypto/tink/internal:legacy_proto_key",
        "//src/main/java/com/google/crypto/tink/internal:proto_key_serialization",
        "//src/main/java/com/google/crypto/tink/signature/internal:legacy_full_verify",
        "//src/main/java/com/google/crypto/tink/signature/internal/testing:legacy_public_key_sign_key_manager",
        "//src/main/java/com/google/crypto/tink/signature/internal/testing:legacy_public_key_verify_key_manager",
        "//src/main/java/com/google/crypto/tink/subtle:bytes",
        "//src/main/java/com/google/crypto/tink/subtle:hex",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:junit_junit",
    ],
)

java_test(
    name = "RsaSsaPkcs1ProtoSerializationTest",
    size = "small",
    srcs = ["RsaSsaPkcs1ProtoSerializationTest.java"],
    deps = [
        "//proto:common_java_proto",
        "//proto:rsa_ssa_pkcs1_java_proto",
        "//proto:tink_java_proto",
        "//src/main/java/com/google/crypto/tink:insecure_secret_key_access",
        "//src/main/java/com/google/crypto/tink:key",
        "//src/main/java/com/google/crypto/tink:parameters",
        "//src/main/java/com/google/crypto/tink/internal:mutable_serialization_registry",
        "//src/main/java/com/google/crypto/tink/internal:proto_key_serialization",
        "//src/main/java/com/google/crypto/tink/internal:proto_parameters_serialization",
        "//src/main/java/com/google/crypto/tink/internal/testing:asserts",
        "//src/main/java/com/google/crypto/tink/signature:rsa_ssa_pkcs1_parameters",
        "//src/main/java/com/google/crypto/tink/signature:rsa_ssa_pkcs1_private_key",
        "//src/main/java/com/google/crypto/tink/signature:rsa_ssa_pkcs1_public_key",
        "//src/main/java/com/google/crypto/tink/signature/internal:rsa_ssa_pkcs1_proto_serialization",
        "//src/main/java/com/google/crypto/tink/subtle:base64",
        "//src/main/java/com/google/crypto/tink/subtle:hex",
        "//src/main/java/com/google/crypto/tink/util:secret_big_integer",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)

java_test(
    name = "RsaSsaPssProtoSerializationTest",
    size = "small",
    srcs = ["RsaSsaPssProtoSerializationTest.java"],
    deps = [
        "//proto:common_java_proto",
        "//proto:rsa_ssa_pss_java_proto",
        "//proto:tink_java_proto",
        "//src/main/java/com/google/crypto/tink:insecure_secret_key_access",
        "//src/main/java/com/google/crypto/tink:key",
        "//src/main/java/com/google/crypto/tink:parameters",
        "//src/main/java/com/google/crypto/tink/internal:mutable_serialization_registry",
        "//src/main/java/com/google/crypto/tink/internal:proto_key_serialization",
        "//src/main/java/com/google/crypto/tink/internal:proto_parameters_serialization",
        "//src/main/java/com/google/crypto/tink/internal/testing:asserts",
        "//src/main/java/com/google/crypto/tink/signature:rsa_ssa_pss_parameters",
        "//src/main/java/com/google/crypto/tink/signature:rsa_ssa_pss_private_key",
        "//src/main/java/com/google/crypto/tink/signature:rsa_ssa_pss_public_key",
        "//src/main/java/com/google/crypto/tink/signature/internal:rsa_ssa_pss_proto_serialization",
        "//src/main/java/com/google/crypto/tink/subtle:base64",
        "//src/main/java/com/google/crypto/tink/subtle:hex",
        "//src/main/java/com/google/crypto/tink/util:secret_big_integer",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)

java_test(
    name = "Ed25519ProtoSerializationTest",
    size = "small",
    srcs = ["Ed25519ProtoSerializationTest.java"],
    deps = [
        "//proto:ed25519_java_proto",
        "//proto:tink_java_proto",
        "//src/main/java/com/google/crypto/tink:insecure_secret_key_access",
        "//src/main/java/com/google/crypto/tink:key",
        "//src/main/java/com/google/crypto/tink:parameters",
        "//src/main/java/com/google/crypto/tink/internal:mutable_serialization_registry",
        "//src/main/java/com/google/crypto/tink/internal:proto_key_serialization",
        "//src/main/java/com/google/crypto/tink/internal:proto_parameters_serialization",
        "//src/main/java/com/google/crypto/tink/internal/testing:asserts",
        "//src/main/java/com/google/crypto/tink/signature:ed25519_parameters",
        "//src/main/java/com/google/crypto/tink/signature:ed25519_private_key",
        "//src/main/java/com/google/crypto/tink/signature:ed25519_public_key",
        "//src/main/java/com/google/crypto/tink/signature/internal:ed25519_proto_serialization",
        "//src/main/java/com/google/crypto/tink/subtle:hex",
        "//src/main/java/com/google/crypto/tink/util:bytes",
        "//src/main/java/com/google/crypto/tink/util:secret_bytes",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)

java_test(
    name = "RsaSsaPkcs1SignVerifyConscryptTest",
    size = "small",
    srcs = ["RsaSsaPkcs1SignVerifyConscryptTest.java"],
    data = ["@wycheproof//testvectors:all"],
    deps = [
        "//src/main/java/com/google/crypto/tink:public_key_sign",
        "//src/main/java/com/google/crypto/tink:public_key_verify",
        "//src/main/java/com/google/crypto/tink/internal:conscrypt_util",
        "//src/main/java/com/google/crypto/tink/internal:util",
        "//src/main/java/com/google/crypto/tink/signature:rsa_ssa_pkcs1_parameters",
        "//src/main/java/com/google/crypto/tink/signature:rsa_ssa_pkcs1_private_key",
        "//src/main/java/com/google/crypto/tink/signature:rsa_ssa_pkcs1_public_key",
        "//src/main/java/com/google/crypto/tink/signature/internal:rsa_ssa_pkcs1_sign_jce",
        "//src/main/java/com/google/crypto/tink/signature/internal:rsa_ssa_pkcs1_verify_conscrypt",
        "//src/main/java/com/google/crypto/tink/signature/internal/testing:rsa_ssa_pkcs1_test_util",
        "//src/main/java/com/google/crypto/tink/signature/internal/testing:signature_test_vector",
        "//src/main/java/com/google/crypto/tink/subtle:hex",
        "//src/main/java/com/google/crypto/tink/testing:wycheproof_test_util",
        "@maven//:com_google_code_gson_gson",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
        "@maven//:org_conscrypt_conscrypt_openjdk_uber",
    ],
)

java_test(
    name = "RsaSsaPkcs1ConscryptFipsTest",
    size = "small",
    srcs = ["RsaSsaPkcs1ConscryptFipsTest.java"],
    tags = ["fips"],
    deps = [
        "//src/main/java/com/google/crypto/tink/config:tink_fips",
        "//src/main/java/com/google/crypto/tink/config/internal:tink_fips_util",
        "//src/main/java/com/google/crypto/tink/signature:rsa_ssa_pkcs1_parameters",
        "//src/main/java/com/google/crypto/tink/signature:rsa_ssa_pkcs1_private_key",
        "//src/main/java/com/google/crypto/tink/signature:rsa_ssa_pkcs1_public_key",
        "//src/main/java/com/google/crypto/tink/signature/internal:rsa_ssa_pkcs1_proto_serialization",
        "//src/main/java/com/google/crypto/tink/signature/internal:rsa_ssa_pkcs1_sign_jce",
        "//src/main/java/com/google/crypto/tink/signature/internal:rsa_ssa_pkcs1_verify_conscrypt",
        "//src/main/java/com/google/crypto/tink/signature/internal/testing:rsa_ssa_pkcs1_test_util",
        "//src/main/java/com/google/crypto/tink/subtle:base64",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
        "@maven//:org_conscrypt_conscrypt_openjdk_uber",
    ],
)

java_test(
    name = "RsaSsaPssSignConscryptTest",
    size = "small",
    srcs = ["RsaSsaPssSignConscryptTest.java"],
    deps = [
        "//src/main/java/com/google/crypto/tink:public_key_sign",
        "//src/main/java/com/google/crypto/tink:public_key_verify",
        "//src/main/java/com/google/crypto/tink/internal:conscrypt_util",
        "//src/main/java/com/google/crypto/tink/internal:util",
        "//src/main/java/com/google/crypto/tink/signature:rsa_ssa_pss_private_key",
        "//src/main/java/com/google/crypto/tink/signature:rsa_ssa_pss_public_key",
        "//src/main/java/com/google/crypto/tink/signature/internal:rsa_ssa_pss_sign_conscrypt",
        "//src/main/java/com/google/crypto/tink/signature/internal:rsa_ssa_pss_verify_conscrypt",
        "//src/main/java/com/google/crypto/tink/signature/internal/testing:rsa_ssa_pss_test_util",
        "//src/main/java/com/google/crypto/tink/signature/internal/testing:signature_test_vector",
        "@maven//:junit_junit",
        "@maven//:org_conscrypt_conscrypt_openjdk_uber",
    ],
)

java_test(
    name = "RsaSsaPssVerifyConscryptTest",
    size = "small",
    srcs = ["RsaSsaPssVerifyConscryptTest.java"],
    data = ["@wycheproof//testvectors:all"],
    deps = [
        "//src/main/java/com/google/crypto/tink:public_key_verify",
        "//src/main/java/com/google/crypto/tink/internal:conscrypt_util",
        "//src/main/java/com/google/crypto/tink/internal:util",
        "//src/main/java/com/google/crypto/tink/signature:rsa_ssa_pss_parameters",
        "//src/main/java/com/google/crypto/tink/signature:rsa_ssa_pss_public_key",
        "//src/main/java/com/google/crypto/tink/signature/internal:rsa_ssa_pss_verify_conscrypt",
        "//src/main/java/com/google/crypto/tink/signature/internal/testing:rsa_ssa_pss_test_util",
        "//src/main/java/com/google/crypto/tink/signature/internal/testing:signature_test_vector",
        "//src/main/java/com/google/crypto/tink/subtle:bytes",
        "//src/main/java/com/google/crypto/tink/subtle:hex",
        "//src/main/java/com/google/crypto/tink/testing:wycheproof_test_util",
        "@maven//:com_google_code_gson_gson",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
        "@maven//:org_conscrypt_conscrypt_openjdk_uber",
    ],
)

java_test(
    name = "RsaSsaPssConscryptFipsTest",
    size = "small",
    srcs = ["RsaSsaPssConscryptFipsTest.java"],
    tags = ["fips"],
    deps = [
        "//src/main/java/com/google/crypto/tink/config:tink_fips",
        "//src/main/java/com/google/crypto/tink/config/internal:tink_fips_util",
        "//src/main/java/com/google/crypto/tink/signature:rsa_ssa_pss_parameters",
        "//src/main/java/com/google/crypto/tink/signature:rsa_ssa_pss_private_key",
        "//src/main/java/com/google/crypto/tink/signature/internal:rsa_ssa_pss_sign_conscrypt",
        "//src/main/java/com/google/crypto/tink/signature/internal:rsa_ssa_pss_verify_conscrypt",
        "//src/main/java/com/google/crypto/tink/signature/internal/testing:rsa_ssa_pss_test_util",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
        "@maven//:org_conscrypt_conscrypt_openjdk_uber",
    ],
)

java_test(
    name = "Ed25519VerifyJceTest",
    size = "small",
    srcs = ["Ed25519VerifyJceTest.java"],
    data = ["@wycheproof//testvectors:all"],
    deps = [
        "//src/main/java/com/google/crypto/tink:public_key_verify",
        "//src/main/java/com/google/crypto/tink/config:tink_fips",
        "//src/main/java/com/google/crypto/tink/internal:conscrypt_util",
        "//src/main/java/com/google/crypto/tink/internal:util",
        "//src/main/java/com/google/crypto/tink/signature:ed25519_private_key",
        "//src/main/java/com/google/crypto/tink/signature:ed25519_public_key",
        "//src/main/java/com/google/crypto/tink/signature/internal:ed25519_verify_jce",
        "//src/main/java/com/google/crypto/tink/signature/internal/testing:ed25519_test_util",
        "//src/main/java/com/google/crypto/tink/signature/internal/testing:signature_test_vector",
        "//src/main/java/com/google/crypto/tink/subtle:base64",
        "//src/main/java/com/google/crypto/tink/subtle:bytes",
        "//src/main/java/com/google/crypto/tink/subtle:hex",
        "//src/main/java/com/google/crypto/tink/testing:wycheproof_test_util",
        "@maven//:com_google_code_gson_gson",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
        "@maven//:org_conscrypt_conscrypt_openjdk_uber",
    ],
)

java_test(
    name = "Ed25519SignJceTest",
    size = "small",
    srcs = ["Ed25519SignJceTest.java"],
    data = ["@wycheproof//testvectors:all"],
    deps = [
        "//src/main/java/com/google/crypto/tink:public_key_sign",
        "//src/main/java/com/google/crypto/tink:public_key_verify",
        "//src/main/java/com/google/crypto/tink/config:tink_fips",
        "//src/main/java/com/google/crypto/tink/internal:conscrypt_util",
        "//src/main/java/com/google/crypto/tink/internal:util",
        "//src/main/java/com/google/crypto/tink/signature:ed25519_private_key",
        "//src/main/java/com/google/crypto/tink/signature/internal:ed25519_sign_jce",
        "//src/main/java/com/google/crypto/tink/signature/internal:ed25519_verify_jce",
        "//src/main/java/com/google/crypto/tink/signature/internal/testing:ed25519_test_util",
        "//src/main/java/com/google/crypto/tink/signature/internal/testing:signature_test_vector",
        "//src/main/java/com/google/crypto/tink/subtle:base64",
        "//src/main/java/com/google/crypto/tink/subtle:ed25519_sign",
        "//src/main/java/com/google/crypto/tink/subtle:hex",
        "//src/main/java/com/google/crypto/tink/subtle:random",
        "//src/main/java/com/google/crypto/tink/testing:wycheproof_test_util",
        "@maven//:com_google_code_gson_gson",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
        "@maven//:org_conscrypt_conscrypt_openjdk_uber",
    ],
)

java_test(
    name = "Ed25519JceWithoutConscryptTest",
    size = "small",
    srcs = ["Ed25519JceWithoutConscryptTest.java"],
    deps = [
        "//src/main/java/com/google/crypto/tink:insecure_secret_key_access",
        "//src/main/java/com/google/crypto/tink:public_key_sign",
        "//src/main/java/com/google/crypto/tink:public_key_verify",
        "//src/main/java/com/google/crypto/tink/signature:ed25519_private_key",
        "//src/main/java/com/google/crypto/tink/signature:ed25519_public_key",
        "//src/main/java/com/google/crypto/tink/signature/internal:ed25519_sign_jce",
        "//src/main/java/com/google/crypto/tink/signature/internal:ed25519_verify_jce",
        "//src/main/java/com/google/crypto/tink/subtle:hex",
        "//src/main/java/com/google/crypto/tink/util:bytes",
        "//src/main/java/com/google/crypto/tink/util:secret_bytes",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)

java_test(
    name = "EcdsaSignJceTest",
    size = "small",
    srcs = ["EcdsaSignJceTest.java"],
    deps = [
        "//src/main/java/com/google/crypto/tink:public_key_sign",
        "//src/main/java/com/google/crypto/tink:public_key_verify",
        "//src/main/java/com/google/crypto/tink/internal:conscrypt_util",
        "//src/main/java/com/google/crypto/tink/internal:util",
        "//src/main/java/com/google/crypto/tink/signature:ecdsa_private_key",
        "//src/main/java/com/google/crypto/tink/signature:ecdsa_public_key",
        "//src/main/java/com/google/crypto/tink/signature/internal:ecdsa_sign_jce",
        "//src/main/java/com/google/crypto/tink/signature/internal:ecdsa_verify_jce",
        "//src/main/java/com/google/crypto/tink/signature/internal/testing:ecdsa_test_util",
        "//src/main/java/com/google/crypto/tink/signature/internal/testing:signature_test_vector",
        "//src/main/java/com/google/crypto/tink/subtle:bytes",
        "//src/main/java/com/google/crypto/tink/subtle:elliptic_curves",
        "//src/main/java/com/google/crypto/tink/subtle:enums",
        "//src/main/java/com/google/crypto/tink/testing:test_util",
        "@maven//:junit_junit",
    ],
)

java_test(
    name = "EcdsaSignVerifyFipsTest",
    size = "small",
    srcs = ["EcdsaSignVerifyFipsTest.java"],
    tags = ["fips"],
    deps = [
        "//src/main/java/com/google/crypto/tink:public_key_sign",
        "//src/main/java/com/google/crypto/tink:public_key_verify",
        "//src/main/java/com/google/crypto/tink/config:tink_fips",
        "//src/main/java/com/google/crypto/tink/config/internal:tink_fips_util",
        "//src/main/java/com/google/crypto/tink/signature:ecdsa_private_key",
        "//src/main/java/com/google/crypto/tink/signature:ecdsa_public_key",
        "//src/main/java/com/google/crypto/tink/signature/internal:ecdsa_sign_jce",
        "//src/main/java/com/google/crypto/tink/signature/internal:ecdsa_verify_jce",
        "//src/main/java/com/google/crypto/tink/signature/internal/testing:ecdsa_test_util",
        "//src/main/java/com/google/crypto/tink/signature/internal/testing:signature_test_vector",
        "//src/main/java/com/google/crypto/tink/subtle:elliptic_curves",
        "//src/main/java/com/google/crypto/tink/subtle:enums",
        "@maven//:junit_junit",
        "@maven//:org_conscrypt_conscrypt_openjdk_uber",
    ],
)

java_test(
    name = "EcdsaVerifyJceTest",
    size = "small",
    srcs = ["EcdsaVerifyJceTest.java"],
    data = ["@wycheproof//testvectors:all"],
    tags = ["notsan"],
    deps = [
        "//src/main/java/com/google/crypto/tink/config:tink_fips",
        "//src/main/java/com/google/crypto/tink/signature/internal:ecdsa_sign_jce",
        "//src/main/java/com/google/crypto/tink/signature/internal:ecdsa_verify_jce",
        "//src/main/java/com/google/crypto/tink/subtle:elliptic_curves",
        "//src/main/java/com/google/crypto/tink/subtle:enums",
        "//src/main/java/com/google/crypto/tink/subtle:hex",
        "//src/main/java/com/google/crypto/tink/subtle:subtle_util_cluster",
        "//src/main/java/com/google/crypto/tink/testing:test_util",
        "//src/main/java/com/google/crypto/tink/testing:wycheproof_test_util",
        "@maven//:com_google_code_gson_gson",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
        "@maven//:org_conscrypt_conscrypt_openjdk_uber",
    ],
)

java_test(
    name = "RsaSsaPkcs1SignJceTest",
    size = "small",
    srcs = ["RsaSsaPkcs1SignJceTest.java"],
    deps = [
        "//src/main/java/com/google/crypto/tink:public_key_sign",
        "//src/main/java/com/google/crypto/tink:public_key_verify",
        "//src/main/java/com/google/crypto/tink/config:tink_fips",
        "//src/main/java/com/google/crypto/tink/config/internal:tink_fips_util",
        "//src/main/java/com/google/crypto/tink/signature:rsa_ssa_pkcs1_private_key",
        "//src/main/java/com/google/crypto/tink/signature:rsa_ssa_pkcs1_public_key",
        "//src/main/java/com/google/crypto/tink/signature/internal:rsa_ssa_pkcs1_sign_jce",
        "//src/main/java/com/google/crypto/tink/signature/internal/testing:rsa_ssa_pkcs1_test_util",
        "//src/main/java/com/google/crypto/tink/signature/internal/testing:signature_test_vector",
        "//src/main/java/com/google/crypto/tink/subtle:bytes",
        "//src/main/java/com/google/crypto/tink/subtle:rsa_ssa_pkcs1_verify_jce",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
        "@maven//:org_conscrypt_conscrypt_openjdk_uber",
    ],
)

java_test(
    name = "RsaSsaPkcs1SignJceFipsTest",
    size = "small",
    srcs = ["RsaSsaPkcs1SignJceFipsTest.java"],
    deps = [
        "//src/main/java/com/google/crypto/tink/config:tink_fips",
        "//src/main/java/com/google/crypto/tink/config/internal:tink_fips_util",
        "//src/main/java/com/google/crypto/tink/signature:rsa_ssa_pkcs1_parameters",
        "//src/main/java/com/google/crypto/tink/signature:rsa_ssa_pkcs1_private_key",
        "//src/main/java/com/google/crypto/tink/signature/internal:rsa_ssa_pkcs1_sign_jce",
        "//src/main/java/com/google/crypto/tink/signature/internal/testing:rsa_ssa_pkcs1_test_util",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
        "@maven//:org_conscrypt_conscrypt_openjdk_uber",
    ],
)

java_test(
    name = "MlDsaArithmeticUtilTest",
    size = "small",
    srcs = ["MlDsaArithmeticUtilTest.java"],
    deps = [
        "//src/main/java/com/google/crypto/tink/signature/internal:ml_dsa_arithmetic_util",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)

